# Restro_Medha

./: README.md
.github/workflows/: ci-edge.yml
apps/handheld/: package.json
apps/handheld/src/: App.js  offlineQueue.js
apps/pos/: package.json
apps/pos/app/: layout.js  page.js
docs/: architecture_layers.md
docs/contracts/: api-schema.yaml  domain-model.md  event-schema.yaml  gst-invoice-fields.md  rbac-matrix.md  state-machine.md
docs/runbooks/: deployment.md  incident-response.md  pilot-acceptance.md
infra/docker/: .env  .env.example  docker-compose.yml
infra/k8s/: edge-stack.yaml
infra/observability/: README.md
libs/observability/: README.md  pyproject.toml
libs/observability/restro_observability/: __init__.py
libs/observability/restro_observability.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: backup.sh  generate-dev-certs.sh  restore.sh
services/billing/: Dockerfile  main.py  pytest.ini  requirements.txt
services/billing/restro_billing/: __init__.py  main.py
services/billing/restro_billing/api/: deps.py  exception_handlers.py  middleware.py
services/billing/tests/: conftest.py  test_api_integration.py  test_order_service.py
services/gateway/: Dockerfile  go.mod  main.go
services/inventory/: Dockerfile  main.py  requirements.txt
services/inventory/restro_inventory/: __init__.py  main.py
services/inventory/restro_inventory/api/: deps.py  (+1 more)
services/inventory/tests/: conftest.py  test_api_integration.py  test_inventory_service.py
services/sync/: Dockerfile  go.mod  main.go
tests/resilience/: test_resilience.sh
(+51 files in other folders)
