[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "restro-observability"
version = "0.1.0"
description = "Shared structured logging and request correlation for Restro Medha Python services"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["restro_observability*"]
